<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/cvr_img_top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/black"
        tools:ignore="UselessParent">

        <!--<ImageView-->
        <!--android:id="@+id/cvr_img"-->
        <!--android:scaleType="fitXY"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:src="@color/cardview_dark_background"-->
        <!--android:tint="#CC000000"/>-->

    </FrameLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:translationY="30dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_detail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:textColor="#782D34"
            android:text="@string/close"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:translationY="-140dp"
            android:src="@drawable/photo2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/about_name"
            android:textStyle="bold"
            android:layout_marginTop="-20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/about_email"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <!--<ImageView-->
            <!--android:id="@+id/cvr_img_details"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:scaleType="fitXY"-->
            <!--android:src="@android:color/darker_gray" />-->

    </android.support.v7.widget.CardView>




</RelativeLayout>
