<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal"
    app:cardCornerRadius="0dp"
    android:elevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/tv_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@android:color/darker_gray" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:background="#8C000000">

            <TextView
                android:id="@+id/release_date"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="#8C000000">

            <TextView
                android:id="@+id/tv_genre"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:text="@string/genre"/>


            <TextView
                android:id="@+id/tv_name"
                android:paddingTop="12dp"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_gravity="center_vertical"/>

        </FrameLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>