<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".GameDetails">-->

<!--</android.support.constraint.ConstraintLayout>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAFAFA">

   <FrameLayout
       android:id="@+id/cvr_img_top"
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:layout_marginTop="0dp"
       android:background="@android:color/black"
       tools:ignore="UselessParent">

       <!--<ImageView-->
           <!--android:id="@+id/cvr_img"-->
           <!--android:scaleType="fitXY"-->
           <!--android:layout_width="match_parent"-->
           <!--android:layout_height="match_parent"-->
           <!--android:src="@color/cardview_dark_background"-->
           <!--android:tint="#CC000000"/>-->

   </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cvr_img"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:translationY="30dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp">

        <ImageView
        android:id="@+id/cvr_img_details"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/cardview_dark_background"/>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cvr_img"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/desc_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:lineSpacingExtra="6dp"
                    android:lineSpacingMultiplier="1.0"
                    android:text="@string/desc"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

            </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <!--<TableRow-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:paddingBottom="6dp">-->

                    <!--<TextView-->
                        <!--android:layout_width="80dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/detail_detail"-->
                        <!--android:backgroundTint="#CC000000"-->
                        <!--android:textColor="@android:color/darker_gray"-->
                        <!--android:textSize="16sp"-->
                        <!--android:textStyle="bold"/>-->

                <!--</TableRow>-->

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp">


                <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_detail"
                        android:textColor="#782D34"
                        android:backgroundTint="#CC000000"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/title_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp">


                <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/genre_detail"
                        android:backgroundTint="#CC000000"
                        android:textColor="#782D34"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/genre_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp">


                <TextView
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date_detail"
                        android:backgroundTint="#CC000000"
                        android:textColor="#782D34"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/release_date_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp">


                <TextView
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="@string/developer_detail"
                        android:backgroundTint="#CC000000"
                        android:textColor="#782D34"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/developer_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="@string/publisher"
                        android:backgroundTint="#CC000000"
                        android:textColor="#782D34"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/publisher_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="@string/alternative_names"
                        android:backgroundTint="#CC000000"
                        android:textColor="#782D34"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/alt_name_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="@string/game_mode"
                        android:backgroundTint="#CC000000"
                        android:textColor="#782D34"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/game_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="@string/platforms"
                        android:backgroundTint="#CC000000"
                        android:textColor="#782D34"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/platforms_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                </TableRow>


            </TableLayout>


        </android.support.v7.widget.CardView>

        </LinearLayout>


    </ScrollView>




    <!--<FrameLayout-->
        <!--android:background="@android:color/holo_blue_bright"-->
        <!--android:translationY="100dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="200dp">-->

        <!--<ImageView-->
            <!--android:id="@+id/img_details"-->
            <!--android:scaleType="fitXY"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:src="@color/cardview_dark_background" />-->

    <!--</FrameLayout>-->

    <!--<TextView-->
        <!--android:id="@+id/title_detail"-->
        <!--android:layout_width="230dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/title"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textStyle="bold"-->
        <!--android:translationY="140dp"-->
        <!--android:translationX="170dp"-->
        <!--android:ellipsize="end"-->
        <!--android:maxLines="2"-->
        <!--android:textSize="20sp"/>-->


    <!--<TextView-->
        <!--android:id="@+id/desc_detail"-->
        <!--android:layout_width="230dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:maxLines="5"-->
        <!--android:ellipsize="end"-->
        <!--android:text="@string/desc"-->
        <!--android:translationY="210dp"-->
        <!--android:translationX="170dp"/>-->


    <!--<TableLayout-->
        <!--android:layout_width="230dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:translationX="170dp"-->
        <!--android:translationY="220dp">-->

        <!--<TableRow-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp">-->

            <!--<TextView-->
                <!--android:text="@string/publisher"-->
                <!--android:maxLines="2"/>-->

            <!--<TextView-->
                <!--android:id="@+id/publisher_detail"-->
                <!--android:layout_width="160dp"-->
                <!--android:ellipsize="end"-->
                <!--android:maxLines="2"-->
                <!--android:layout_marginStart="5dp"/>-->

        <!--</TableRow>-->

        <!--<TableRow-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content">-->

            <!--<TextView-->
                <!--android:text="@string/developer_detail"-->
                <!--android:maxLines="2"/>-->

            <!--<TextView-->
                <!--android:id="@+id/developer_detail"-->
                <!--android:layout_width="160dp"-->
                <!--android:ellipsize="end"-->
                <!--android:maxLines="2"-->
                <!--android:layout_marginStart="5dp"/>-->

        <!--</TableRow>-->

    <!--</TableLayout>-->

</RelativeLayout>